--- a/数据库/数据库复习.md
+++ b/数据库/数据库复习.md
@@ -2,7 +2,25 @@
 sort: 1
 ---
 
-# 概览
+# 基本知识
 
-按时打算大所多撒多 
+## 并发控制
 
+事务，具有ACID四个特性。
+
+A：Atomicity，要么全部做完，要么一点都不做。
+
+C：Consistency，保证事务符合一致性的操作规则，不出现三种不一致性。
+
+I：Isolation，保证两个事务之间不影响互相的执行，有四种隔离级别
+
+D：Durablity， 保证一旦事务提交，那么它对数据库中的对应数据的状态的变更就会永久保存到数据库中。
+
+
+
+### 四种不一致性
+
+1. 丢失修改
+2. 不可重复读
+3. 脏读
+4. 幻读，通常不要求实现
