--- a/数据库/数据库基础/并发控制.md
+++ b/数据库/数据库基础/并发控制.md
@@ -2,9 +2,7 @@
 sort: 1
 ---
 
-# 基本知识
-
-## 并发控制
+# 并发控制
 
 事务，具有ACID四个特性。
 
@@ -18,7 +16,7 @@ D：Durablity， 保证一旦事务提交，那么它对数据库中的对应数
 
 
 
-### 四种不一致性
+## 四种不一致性
 
 1. 丢失修改
 2. 不可重复读
@@ -27,16 +25,16 @@ D：Durablity， 保证一旦事务提交，那么它对数据库中的对应数
 
 
 
-### 可串行性、冲突可串行性
+## 可串行性、冲突可串行性
 
 如果不管数据库初始状态如何，一个调度对数据库状态的影响都和某个串行调度相同，则我们说这个调度是**可串行化**的 (Serializable)或具有**可串行性**(Serializability)。
 
 冲突可串行性： 一个调度，如果通过交换相邻两个无冲突的操作能够 转换到某一个串行的调度，则称此调度为冲突可串行化的调度。
 
-### 三种并发控制方法
+## 三种并发控制方法
 
-#### 基于封锁的方法
+### 基于封锁的方法
 
-####　基于时间戳的方法
+### 基于时间戳的方法
 
-#### 基于有效性确认的方法
+### 基于有效性确认的方法
