--- a/本仓库配置方式/示例.md
+++ b/本仓库配置方式/示例.md
@@ -1,7 +1,15 @@
 ---
 sort: 2
 ---
-
-# 这里是示例
-
-xxxx
+# 注意
+一定要把第一个一级标题贴近前三行，否则显示不出来。
+示例：
+```
+---
+sort: 2
+---
+# 注意
+一定要把第一个一级标题贴近前三行，否则显示不出来。
+示例：
+```
+以上就是上面的样式的示例。
