--- a/数据库基础/并发控制.md
+++ b/数据库基础/并发控制.md
@@ -17,10 +17,16 @@ D：Durablity， 保证一旦事务提交，那么它对数据库中的对应数
 
 ## 四种不一致性
 
-1. 丢失修改
-2. 不可重复读
-3. 脏读
-4. 幻读，通常不要求实现
+- 丢失修改
+
+![image-20210501102619866](并发控制.assets/image-20210501102619866.png)
+
+- 不可重复读（**重复读错误**）
+
+  ![image-20210501102729402](并发控制.assets/image-20210501102729402.png)
+
+1. 脏读
+2. 幻读，通常不要求实现
 
 
 
@@ -36,3 +42,4 @@ D：Durablity， 保证一旦事务提交，那么它对数据库中的对应数
 ### 基于时间戳的方法
 
 ### 基于有效性确认的方法
+
