--- a/数据库基础/并发控制.md
+++ b/数据库基础/并发控制.md
@@ -245,6 +245,10 @@ if TS(T) >= RT(X) && TS(T) >= WT(X) {
   - 检测 **U要写的元素** 和 **T要写的元素** 是否有交集
   - 写写冲突
 
+总结：需要检查**先启动的U的FIN(U)** <u>是否大于</u> **后启动的T的START(T)以及VAL(T)**。
+
+VAL的作用就是来区分读和写(或许可以理解为读写分离？便于冲突判断)
+
 #### 例子
 
 ![image-20210501124330938](并发控制.assets/image-20210501124330938.png)
