--- a/数据库基础/并发控制.md
+++ b/数据库基础/并发控制.md
@@ -50,9 +50,9 @@ D：Durablity， 保证一旦事务提交，那么它对数据库中的对应数
 如果事务A与B发生了冲突（读写、写读、写写），且A在B之前执行，则A指向B。如果没有环，则冲突可串行化。
 
 ## 三种并发控制方法
-### 基于封锁的方法
+## 基于封锁的方法
 
-#### 四种锁
+### 四种锁
 
 排他锁 e**X**clusive locks：即互斥锁
 
@@ -62,7 +62,7 @@ D：Durablity， 保证一旦事务提交，那么它对数据库中的对应数
 
 增量锁 **I**ncremental lock：增量更新（如A=A+X）[^这部分的资料较少]
 
-#### 加锁、解锁的四个时机（协议、隔离级别）
+### 加锁、解锁的四个时机（协议、隔离级别）
 
 注意：这4个协议分别要从读者和写者进行分析。如2级协议对于读者来说还是会发生重复读错误（不可重复读）。在**上面不可重复读的示例中**，在T1读A的时候都加读锁，读完之后释放；T2写A的时候加写锁，commit之后，T1再读A，就发生了不可重复读（重复读错误）。
 
@@ -82,11 +82,11 @@ D：Durablity， 保证一旦事务提交，那么它对数据库中的对应数
 
 **可串行化  (serializable) ---相当于3级协议**
 
-#### 封锁粒度
+### 封锁粒度
 
 属性值->元组->元组集合->整个关系->整个DB某索引项->整个索引
 
-#### 2PL: two-Phase Locking protocal
+### 2PL: two-Phase Locking protocal
 
 读写数据之前要获得锁。每个事务中所有封锁请求先于任何一个解锁请求
 
@@ -104,13 +104,13 @@ D：Durablity， 保证一旦事务提交，那么它对数据库中的对应数
 >
 > 如果读锁是共享锁的话，在一个事务读完之后可以立即释放而不遵从2PL的协议吗？
 
-### 基于时间戳的方法
+## 基于时间戳的方法
 
 即基于分布式系统中的逻辑时间的概念。
 
 **事务T启动时**，系统将该时刻赋予T，为T的时间戳。时间戳可以表征一系列事务执行的先后次序：时间戳小的事务先执行，时间戳大的事务后执行。
 
-#### 调度规则1
+### 调度规则1
 
 对于每个元素，维护两个时间戳。
 
@@ -131,7 +131,7 @@ D：Durablity， 保证一旦事务提交，那么它对数据库中的对应数
   - 事务写，要比较读时间戳以及写时间戳；事务读，要比较写时间戳
   - 而更新的时候，写更新的是WT，读更新的是RT
 
-##### 解决的问题
+#### 解决的问题
 
 过晚的读、写。
 
@@ -141,7 +141,7 @@ T要写的时候，发现X的读时间戳比自己的大，所以撤回。
 
 ![image-20210501115422604](并发控制.assets/image-20210501115422604.png)
 
-##### 没解决的问题
+#### 没解决的问题
 
 脏读
 
@@ -149,7 +149,7 @@ T要写的时候，发现X的读时间戳比自己的大，所以撤回。
 
 
 
-#### 调度规则2
+### 调度规则2
 
 托马斯写规则
 - 先启动的事务A要写的时候，发现后启动的事务B已经写下去了，那么A的写就不用执行了
@@ -163,7 +163,7 @@ T要写的时候，发现X的读时间戳比自己的大，所以撤回。
 **该位为真，当且仅当最近写x的事务已经提交。**
 C(x)的目的是避免出现事务读另一事务U所写数据然后U终止这样的情况。
 
-##### 事务读请求
+#### 事务读请求
 
 ```go
 if TS(T) >= WT(x){
@@ -179,7 +179,7 @@ if TS(T) >= WT(x){
 	
 ```
 
-##### 事务写请求
+#### 事务写请求
 
 ![image-20210501121155309](并发控制.assets/image-20210501121155309.png)
 
@@ -202,15 +202,15 @@ if TS(T) >= RT(X) && TS(T) >= WT(X) {
 
 
 
-### 基于有效性确认的方法
+## 基于有效性确认的方法
 
-#### 调度器维护三个集合
+### 调度器维护三个集合
 
 1. START集合。已经开始但尚未完成有效性确认的事务集合。对此集合中的事务，调度器维护START(T)，即事务T**开始的时间。**
 2. VAL集合。已经确认有效性但尚未完成第3阶段写的事务。对此集合中的事务，调度器维护START(T)和VAL(T)，即T**确认的时间。**
 3. FIN集合。已经完成第3阶段的事务。对这样的事务T,START(T), VAL(T)和FIN(T)，即T**完成的时间。**
 
-#### 事务分三个阶段进行
+### 事务分三个阶段进行
 
 - 读阶段。
   - 事务从数据库中读取读集合中的所有元素。事务还在其局部地址空间计算它将要写的所有值；部地址空间计算它将要写的所有值；
@@ -223,7 +223,7 @@ if TS(T) >= RT(X) && TS(T) >= WT(X) {
 
 并发事务串行的顺序即事务有效性确认的顺序。
 
-#### 有效性确认规则
+### 有效性确认规则
 
 ![image-20210501122920978](并发控制.assets/image-20210501122920978.png)
 
@@ -249,7 +249,7 @@ if TS(T) >= RT(X) && TS(T) >= WT(X) {
 
 VAL的作用就是来区分读和写(或许可以理解为读写分离？便于冲突判断)
 
-#### 例子
+### 例子
 
 ![image-20210501124330938](并发控制.assets/image-20210501124330938.png)
 
