--- a/本仓库配置方式/配置方式.md
+++ b/本仓库配置方式/配置方式.md
@@ -8,7 +8,7 @@ sort: 1
 # 我的配置方式
 在仓库根目录添加以下四个文件：
 
-1. Gemfile
+- Gemfile
 
 ```
 source "https://gems.ruby-china.com"
@@ -17,8 +17,7 @@ gem "jekyll-rtd-theme"
 gem "github-pages", group: :jekyll_plugins
 ```
 
-
-2. Makefile
+- Makefile
 
 ```
 DEBUG=JEKYLL_GITHUB_TOKEN=blank PAGES_API_URL=http://0.0.0.0
@@ -39,8 +38,7 @@ server: clean
 	@${DEBUG} bundle exec jekyll server --livereload --config _config.yml,.debug.yml
 ```
 
-
-3. _config.yml
+- _config.yml
 
 ```
 title: Your project name
@@ -59,7 +57,7 @@ exclude:
   - Gemfile.lock
 ```
 
-4. .debug.yml
+- .debug.yml
 
 ```
 remote_theme: false
