--- a/数据库基础/索引.md
+++ b/数据库基础/索引.md
@@ -2,3 +2,28 @@
 sort: 7
 ---
 # 数据库索引
+
+## 基本概念
+
+![image-20210501172504435](%E7%B4%A2%E5%BC%95.assets/image-20210501172504435.png)
+
+### 稠密索引与系数索引
+
+### 主索引与辅助索引
+
+### 聚簇索引与非聚簇索引
+
+### 倒排索引
+
+### 多级索引
+
+## B+树索引
+
+### 建立
+
+### 插入
+
+### 删除
+
+## 散列索引
+
