--- a/数据库基础/并发控制.md
+++ b/数据库基础/并发控制.md
@@ -3,17 +3,17 @@ sort: 9
 ---
 # 并发控制
 
+```note
 事务，具有ACID四个特性。
 
-A：Atomicity，要么全部做完，要么一点都不做。
+A：`Atomicity`，要么全部做完，要么一点都不做。
 
-C：Consistency，保证事务符合一致性的操作规则，不出现三种不一致性。
+C：`Consistency`，保证事务符合一致性的操作规则，不出现三种不一致性。
 
-I：Isolation，保证两个事务之间不影响互相的执行，有四种隔离级别
+I：`Isolation`，保证两个事务之间不影响互相的执行，有四种隔离级别
 
-D：Durablity， 保证一旦事务提交，那么它对数据库中的对应数据的状态的变更就会永久保存到数据库中。
-
-
+D：`Durablity`， 保证一旦事务提交，那么它对数据库中的对应数据的状态的变更就会永久保存到数据库中。
+```
 
 ## 四种不一致性
 
