--- a/数据库基础/索引.md
+++ b/数据库基础/索引.md
@@ -7,7 +7,45 @@ sort: 7
 
 ![image-20210501172504435](%E7%B4%A2%E5%BC%95.assets/image-20210501172504435.png)
 
-### 稠密索引与系数索引
+### 稠密索引与稀疏索引
+
+对于主文件中**每一个记录**(形成的每一个索引字段值)，都有一个索引项和它对应，指明该记录所在位置。这样的索引称**稠密索引(dense index)**。
+
+```note
+Q：对于每个记录都有索引，那索引的意义在哪里呢？
+A: 
+- 每个记录指的是“不同”的记录，而每一条记录是可能存在重复值的
+- 索引减少了存储空间，降低内存的压力
+![image-20210502104439329](%E7%B4%A2%E5%BC%95.assets/image-20210502104439329.png)
+```
+
+```warning
+上面提到的“不同的”记录，也体现了稠密索引的定位方式
+- 如果是候选键的稠密索引，则能保证候选键是唯一的，因此索引与被索引项是一对一的关系
+- 如果是非候选键的稠密索引，则可能会出现重复的记录（指作为索引的那个字段在主文件中可能出现重复）
+	解决方案有三种：
+	- 令索引文件中的索引字段是不重复的，则主文件应当按照索引字段排序
+	- 令索引文件中的索引字段是可重复的，则主文件可以不按索引字段排序
+	- 引入指针桶（即链表）来存放对应的索引；索引指向的是一个桶，桶里存放的是各个相同的索引值指向的不同的主文件元组——我自己把这种方式认为是多级索引
+```
+
+
+
+对于主文件中**部分记录**(形成的索引字段值)，有索引项和它对应，这样的索引称**非稠密索引(undense index)或稀疏索引(sparse index)**
+
+```note
+比如字典是通过26个英文字母进行索引的，因此使用的是稀疏索引
+```
+
+```tip
+稀疏索引要求主文件必须是按对应索引字段属性排序存储
+
+相比稠密索引：空间占用更少，维护任务更轻，但速度更慢
+
+平衡: 索引项不指向记录指针，而是指向记录所在存储块的指针，即每一存储块有一个索引项，而不是每条记录有一索引项----**主索引**
+```
+
+
 
 ### 主索引与辅助索引
 
