--- a/数据库基础/索引.md
+++ b/数据库基础/索引.md
@@ -29,8 +29,6 @@ A:
 	- 引入指针桶（即链表）来存放对应的索引；索引指向的是一个桶，桶里存放的是各个相同的索引值指向的不同的主文件元组——我自己把这种方式认为是多级索引
 ```
 
-
-
 对于主文件中**部分记录**(形成的索引字段值)，有索引项和它对应，这样的索引称**非稠密索引(undense index)或稀疏索引(sparse index)**
 
 ```note
@@ -45,17 +43,69 @@ A:
 平衡: 索引项不指向记录指针，而是指向记录所在存储块的指针，即每一存储块有一个索引项，而不是每条记录有一索引项----**主索引**
 ```
 
-
-
 ### 主索引与辅助索引
+
+上面提到了主索引，主索引通常是对每一存储块有一个索引项，索引项的总数和存储表所占的存储块数目相同，存储表的每一存储块的第一条记录，又称为**锚记录(anchor record)**, 或简称为**块锚(block anchor)**。
+
+- 主索引的索引字段值为块锚的索引字段值，而指针指向其所在的存储块。
+
+- 主索引是按索引字段值进行排序的一个有序文件，通常建立在有序主文件的基于主码的排序字段上，即主索引的索引字段与主文件的排序码(主码)有对应关系。
+
+```note
+用实际的例子讲，就是新华字典的索引方式：要搜索“憋”，我们就首先去找到“b”所指向的存储块。
+但也不完全相同，如上面的定义所说：“主索引通常是对每一存储块有一个索引项”，而新华字典显然每个索引项对应的存储块的数量是不同的
+```
+
+辅助索引是定义在主文件的任一或多个非排序字段上的辅助存储结构。
+
+- 辅助索引通常是对某一非排序字段上的每一个不同值有一个索引项：
+	索引字段即是该字段的不同值，而指针则指向包含该记录的块或该记录本身；
+- 当非排序字段为索引字段时，如该字段值不唯一，则要采用一个类似链表的结构来保存包含该字段值的所有记录的位置。
+- 辅助索引是稠密索引，其检索效率有时相当高。
+
+```note
+**主索引和辅助索引的区别**
+- 一个主文件仅可以有一个主索引，但可以有多个辅助索引
+- 主索引通常建立于主码/排序码上面；辅助索引建立于其他属性上面
+- 可以利用主索引重新组织主文件数据，但辅助索引不能改变主文件数据
+- 主索引是稀疏索引，辅助索引是稠密索引
+```
+
+
 
 ### 聚簇索引与非聚簇索引
 
+**聚簇索引—是指索引中邻近的记录在主文件中也是邻近存储的；**
+
+**非聚簇索引—是指索引中邻近的记录在主文件中不一定是邻近存储的;**
+
+- 如果主文件的**某一排序字段不是主码**，则该字段上每个记录取值便不唯一，
+	此时该字段被称为聚簇字段；聚簇索引通常是定义在聚簇字段上。
+- 聚簇索引通常是对聚簇字段上的每一个不同值有一个索引项。
+	索引项的总数和主文件中聚簇字段上不同值的数目相同），索引字段即是聚簇字段的不同值，由于有相同聚簇字段值的记录可能存储于若干块中，则索引项的指针指向其中的第一个块。
+- 一个主文件只能有一个聚簇索引文件，但可以有多个非聚簇索引文件
+- **主索引通常是聚簇索引**(但其索引项总数不一定和主文件中聚簇字段上不同值的数目相同，其和主文件存储块数目相同)；
+	**辅助索引通常是非聚簇索引。**
+- 主索引/聚簇索引是**能够决定记录存储位置的索引**；
+	而非聚簇索引则**只能用于查询**，指出已存储记录的位置。
+
+![image-20210502112012869](%E7%B4%A2%E5%BC%95.assets/image-20210502112012869.png)
+
+```note
+小结：
+- 主索引通常是稀疏索引+聚簇索引，能够决定存储位置记录；一个主文件只能有一个主索引
+- 辅助索引通常是稠密索引+非聚簇索引，只能用于查询；一个主文件能有很多辅助索引
+```
+
 ### 倒排索引
 
-### 多级索引
+这里放点网上的资料
+
+[倒排索引的创建过程](https://www.jianshu.com/p/07e9c44af3f2)
 
 ## B+树索引
+
+B+树就是多级索引的一个体现。能够自动保持与主文件大小相适应的数的层次，每个索引块的指针利用率都在50%到100%之间。
 
 ### 建立
 
