--- a/数据库基础/索引.md
+++ b/数据库基础/索引.md
@@ -107,11 +107,115 @@ A:
 
 B+树就是多级索引的一个体现。能够自动保持与主文件大小相适应的数的层次，每个索引块的指针利用率都在50%到100%之间。
 
+```note
+**B+树的约定**
+一个存储块中应该放多少个索引项？
+![image-20210502114505856](%E7%B4%A2%E5%BC%95.assets/image-20210502114505856.png)
+Pn表示指针（pointer）
+Kn表示索引字段值（key）
+我们假设一个P需要8字节，一个K需要4字节；则这个索引项一共的大小为`n*8+(n-1)*4`，那么存储块的大小/索引项的大小就是能放多少个索引项
+```
+
+```tip
+为什么是n个P和n-1个K呢？下面先看看二叉搜索树的定义：
+> 二叉查找树（Binary Search Tree），（又：二叉搜索树，二叉排序树）它或者是一棵空树，或者是具有下列性质的二叉树： 若它的左子树不空，则左子树上所有结点的值均小于它的根结点的值； 若它的右子树不空，则右子树上所有结点的值均大于它的根结点的值； 它的左、右子树也分别为二叉排序树。
+B+树就相当于是n叉搜索树。
+一个小学问题：“道路种了n-1棵树，那么这条道路被分为了几段呢？”
+```
+
+上面的n是一个索引块的容量。在实际使用中，不一定能够每次都达到他的容量。就比如烧水，并不是每一次都把水壶装满，才打开电源。但我们也不能让这个水壶里的水太少，否则每单位水消耗的电能就搞了，性价比就太低了。
+
+所以B+树保证一个索引块实际使用的指针数量d满足：`n/2<=d<=n`，也就是说，每次烧水，水壶里都至少有一半的水，做了一个折中（trade off）。
+
+```note
+B+树的需求
+- 层数尽量平衡（自动保持与主文件大小相适应的树的层次）
+- 每个索引块利用率在50%及以上
+```
+
+> B树和B+树相比，有两个最核心的区别：
+> 1. B树没有内部节点和叶子结点的区分，它的每个节点都是即存了key又存了data。
+> 2. 由于没有内部节点和叶子结点的区分，使得B+树没有将叶子结点用链表串联起来的结构。
+>
+> 这两个区别给B树带来了两个检索的特点：
+> 1. 进行单个key查询时，B树最快可以在O(1)的时间代价内就查到。而从平均时间代价来看，会比B+树稍快一些。但波动会比较大，因为每个节点既存key又存data会使得树变高，底层的节点的IO次数就会变多。
+> 2. 进行范围查询时，由于缺乏叶子结点的连接，因此只能通过树的遍历来完成范围查询，这会涉及多个节点的IO问题，效率不如B+树。
+>
+> 因此，存在大量范围查询的场景，适合使用B+树（比如数据库）
+> 而对大量单个key查询的场景，可以考虑B树（比如NOSQL的MongoDB）
+> [原文链接](https://blog.csdn.net/Snippers/article/details/116121797)
+
 ### 建立
+
+![image-20210502120139445](%E7%B4%A2%E5%BC%95.assets/image-20210502120139445.png)
+
+![image-20210502120150173](%E7%B4%A2%E5%BC%95.assets/image-20210502120150173.png)
+
+![image-20210502120216170](%E7%B4%A2%E5%BC%95.assets/image-20210502120216170.png)
+
+![image-20210502120231392](%E7%B4%A2%E5%BC%95.assets/image-20210502120231392.png)
 
 ### 插入
 
+- 可能需要分裂：当索引块充满时，需要分裂。
+- 分裂可能引发连锁反应，由叶结点直至根结点。
+- 分裂后需要仔细调整索引键值及指针。
+- 注意叶子结点之间链接关系的调整。
+
 ### 删除
 
+- 可能需要合并：合并记录—从相邻结点中转移索引项(仍旧是两个结点块)
+- 可能需要合并：两个结点块合并成一个结点块。
+- 合并可能引发连锁反应，由叶结点直至根结点。
+- 合并后需要仔细调整索引键值及指针。
+- 注意叶子结点之间链接关系的调整。
+
 ## 散列索引
+
+- 有M个桶，每个桶是有相同容量的存储(可以是内存页，也可以是磁盘块)
+
+- 散列函数 `h(k)`，可以将键值k映射到`{ 0, 1, …, M-1 }`中的某一个值
+
+- 将具有键值k的记录`Record(k)` 存储在对应`h(k)`编号的桶中
+
+插入：桶满了，就加到溢出桶中
+
+删除：溢出桶没了，就合并主桶
+
+```note
+目标：
+- 最好没有溢出桶，每一个散列值仅有一个桶。读写每一个键值都只读写一个存储块
+- 数据均匀分布
+- 键值非常多时，每个散列值可能都多于1个桶。则此时就类似于多级索引，需要先找主桶，再根据链表找溢出桶——桶的数目怎么确定
+```
+
+
+
+### 静态散列
+
+桶的数目不变。
+
+问题：
+
+- 太大，导致浪费
+- 太小，导致搜索效率低
+
+### 动态散列
+
+> 我认为**一致性哈希**也是动态散列的一个体现
+
+桶的数目随键值增多，动态增加。
+
+哈希函数改变带来的问题：
+
+```note
+桶数量的变化是否会导致原来的存储内容变化?
+或者说，是否需要原来已经散列存储的数据重新散列一遍呢?
+```
+
+#### 动态散列索引
+
+
+
+#### 线性散列索引
 
