--- a/数据库基础/索引.md
+++ b/数据库基础/索引.md
@@ -213,9 +213,70 @@ B+树的需求
 或者说，是否需要原来已经散列存储的数据重新散列一遍呢?
 ```
 
-#### 动态散列索引
+#### 可扩展散列索引
 
+散列函数h为每个键计算出一个K位二进制序序列。但桶的数目总是使用从序列第一位或最后一位算起的若干位，设这个数为i，则`i<K`。此时桶数组有`2^i`个桶。
 
+这里我们假设取前i位作为散列值。k=4，i=1。一共有2个桶
+
+<img src="%E7%B4%A2%E5%BC%95.assets/image-20210502154055110.png" alt="image-20210502154055110" style="zoom: 67%;" />
+
+接下来插入1010，发现1号桶满了，则i增加1，然后重新散列该桶。（其他桶不需要变）
+
+<img src="%E7%B4%A2%E5%BC%95.assets/image-20210502154148629.png" alt="image-20210502154148629" style="zoom:67%;" />
+
+```note
+存在的问题：
+- 当桶数组需要翻倍时，要做大量的工作（重新散列）
+- 当桶数翻倍后，其在主存中可能就装不下了，或者要占用更大的空间
+- 如果每块的记录数很少，那么很有可能某一块的分裂比在逻辑上需要的分裂时间提前很多。例如：块中存放2个记录，即使记录总数远小于220, 但也可能出现三个记录的前20位二进制位序列一样，在这种情况下，将不得不使用i=20和100万个桶数组*（即发生了数据倾斜的情况）
+```
 
 #### 线性散列索引
+
+桶数n的选择：总是使存储块的平均记录数，保持与存储块所能容纳的记录总数成一个固定的比例，例如80%。超过此比例，则桶数`增长1块`，分裂。
+
+存储块并不总是可以分裂，所以允许有溢出块，尽管每个桶的**平均溢出块数**远小于1。（即溢出块出现的数量和概率小）
+
+```note
+符号约定：
+	i-当前使用的散列函数的位数
+	n-当前的桶数
+	r-当前散列表中的记录总数，r<=1.7n
+```
+
+假定散列函数值的i位为桶数组项编号，且有一个键值为K的记录想要插入到编号为`a1a2…ai`的桶中, 即`a1a2…ai`是h(K)的后i位。把`a1a2…ai`当 作二进制整数，设它为m
+
+- 如果`m<n`，则编号为m的桶存在，并把记录存入该桶中
+- 如果`n<=m<2^i`, 那么桶还不存在，因此我们把记录存入桶`m-2^(i-1)`, 也就是当我们把`a1`(它肯定是1)改为0时对应的桶。
+
+插入0101，需要分裂。
+
+![image-20210502163219960](%E7%B4%A2%E5%BC%95.assets/image-20210502163219960.png)
+
+分裂后如下图所示：
+
+![image-20210502163313799](%E7%B4%A2%E5%BC%95.assets/image-20210502163313799.png)
+
+此时再插入0001，则需要增加一个溢出桶
+
+![image-20210502163420624](%E7%B4%A2%E5%BC%95.assets/image-20210502163420624.png)
+
+再插入0111，因为没有11桶，因此插入到11-2^1=01桶中。
+
+![image-20210502163542033](%E7%B4%A2%E5%BC%95.assets/image-20210502163542033.png)
+
+此时需要增加一个桶11，由01分裂而来
+
+![image-20210502163639202](%E7%B4%A2%E5%BC%95.assets/image-20210502163639202.png)
+
+这是线性散列索引的过程
+
+```note
+小结：
+- 键值由低位向高位次序使用。对应索引项存储在由桶数组指针指向的存储块
+- 当 r/n (当前索引项数除以桶数)大于一定比例时，按次序增加 1 个桶
+- 假设该桶为`1 a2 a3 ... ai`，则该桶由`0 a2 a3 ... ai`对应的块分裂而来
+- 当桶数超过 2^i 个桶时，则使 i 增 1。
+```
 
