--- a/数据库基础/数据库物理存储.md
+++ b/数据库基础/数据库物理存储.md
@@ -2,3 +2,65 @@
 sort: 6
 ---
 # 物理存储
+
+## 基本概念
+
+盘面->磁道->扇区->字节
+
+![image-20210502165158973](%E6%95%B0%E6%8D%AE%E5%BA%93%E7%89%A9%E7%90%86%E5%AD%98%E5%82%A8.assets/image-20210502165158973.png)
+
+寻道时间：找到那个磁道（沿着半径找）
+
+旋转时间：找到沿着圆找
+
+传输时间：找到之后的传输时间
+
+RAID：Redundant Array of Independent Disk
+
+​	并行读取多个磁盘，可靠性通过奇偶检验与纠错实现
+
+## 堆文件
+
+记录可存储于任意有空间的位置，磁盘上存储的记录是无序的。更新效率高，但检索效率可能低
+
+插入的方法：
+
+- 新记录总插入到文件尾部；删除记录时，可以直接删除该记录所在位置的内容，也可以在该记录前标记“删除标记”
+- 在前者基础上，新增记录可以利用那些标记为“删除标记”的记录空间
+
+导致的问题：
+
+- 碎片化
+
+因此出现了数据库重组技术，用来整理碎片。
+
+## 顺序文件
+
+用于存储排序的属性通常称为**排序字段(Ordering field)**，通常，排序字段使用关系中的**主码**， 所以又称**排序码(Ordering key)**
+
+```note
+特点
+- 记录按某属性或属性组值的顺序插入，磁盘上存储的记录是有序的。检索效率可能高。但当按非排序字段检索时，速度可能不会提高很多。
+问题
+- 有序记录文件的更新效率可能很低，因为在更新时要移动其他记录，为插入记录留出空间。
+解决
+- 为将来可能插入元组预留空间(这可能造成空间浪费), 或使用一个临时的无序文件(被称为**溢出文件**)保留新增的记录
+又导致的问题
+- 当采取溢出文件措施时，检索操作既要操作主文件，又要操作溢出文件。所以需要周期性重新组织数据库
+```
+
+**数据库重组**将溢出文件合并到主文件，并恢复主文件中的记录顺序。与上面的有一丝丝不一样。
+
+## 散列文件
+
+用于进行散列函数计算的属性通常称为散列字段(Hash field)，散列字段通常也采用关系中的主码，所以又称散列码(hash key)。
+
+```note
+特点
+- 可以把记录按某属性或属性组的值, 依据一个散列函数来计算其应存放的位置：桶号(Bucket, 块号或簇号等)。检索效率和更新效率都有一定程度的提高
+- 不同记录可能被hash成同一桶号，此时需在桶内顺序检索出某一记录
+- 使用链接法处理溢出
+- 聚簇：将具有相同或相似属性值的记录存放于连续的磁盘簇块中
+- 多表聚簇：将若干个相互关联的Table存储于一个文件中—这可提高多表情况下的查询速度
+```
+
