--- a/分布式/分布式.md
+++ b/分布式/分布式.md
@@ -2,3 +2,9 @@
 sort: 1
 ---
 # 分布式概述
+## 体系结构模型
+- 在分布式系统中进行通信的实体是什么？
+- 他们如何沟通，或者更具体地说，使用什么沟通范式？
+- 他们在整个架构中的角色和责任是什么（可能会改变）？
+- 它们在物理分布式基础设施上是如何映射的（它们的位置是什么）？
+
