--- a/GO/设计模式/构建型模式.md
+++ b/GO/设计模式/构建型模式.md
@@ -1,3 +1,16 @@
+---
+sort: 1
+---
+
+# 创建型模式
+
+## 简单工厂模式
+
+![img](%E6%9E%84%E5%BB%BA%E5%9E%8B%E6%A8%A1%E5%BC%8F.assets/SimpleFactory.jpg)
+
+
+
+```go
 package main
 
 import "fmt"
@@ -42,3 +55,9 @@ func main() {
 	fmt.Println(A.Use())
 	fmt.Println(B.Use())
 }
+```
+
+## 工厂方法模式
+
+![img](%E6%9E%84%E5%BB%BA%E5%9E%8B%E6%A8%A1%E5%BC%8F.assets/FactoryMethod.jpg)
+
