--- a/数据库基础/规范化理论.md
+++ b/数据库基础/规范化理论.md
@@ -169,7 +169,7 @@ F: 函数依赖集
 #### 定义
 如果关系已经是1NF的基础上，如果每个**非主属性完全函数依赖于候选键**，则称该关系属于第二范式。
 
-即：2NF在1NF的基础之上，消除了非主属性对于码的部分函数依赖。
+即：2NF在1NF的基础之上，消除了**非主属性对于码的部分函数依赖**。
 ```
 
 问：怎么判断是否是2NF？
@@ -303,11 +303,18 @@ F: 函数依赖集
 
 这样，之前的插入异常，修改异常与删除异常的问题就被解决了。
 
-#### BCNF
+### BCNF
 
 在 3NF 的基础上消除**主属性**对于码的部分与传递函数依赖。
 
 ![image-20210503173702259](%E8%A7%84%E8%8C%83%E5%8C%96%E7%90%86%E8%AE%BA.assets/image-20210503173702259.png)
+
+```note
+### 小结
+2NF消除了**非主属性对于码的部分函数依赖**
+3NF消除了**非主属性对于码的传递函数依赖**
+BCNF消除了**主属性对于码的部分与传递函数依赖**
+```
 
 ## 模式分解
 
