--- a/数据库基础/规范化理论.md
+++ b/数据库基础/规范化理论.md
@@ -307,19 +307,78 @@ F: 函数依赖集
 
 在 3NF 的基础上消除**主属性**对于码的部分与传递函数依赖。
 
-![image-20210503173702259](%E8%A7%84%E8%8C%83%E5%8C%96%E7%90%86%E8%AE%BA.assets/image-20210503173702259.png)
+![·](%E8%A7%84%E8%8C%83%E5%8C%96%E7%90%86%E8%AE%BA.assets/image-20210503173702259.png)
 
 ```note
 ### 小结
-2NF消除了**非主属性对于码的部分函数依赖**
-3NF消除了**非主属性对于码的传递函数依赖**
-BCNF消除了**主属性对于码的部分与传递函数依赖**
+2NF消除了**非主属性对于码（候选键）的部分函数依赖**
+
+3NF消除了**非主属性对于码（候选键）的传递函数依赖**
+
+BCNF消除了**主属性对于码（候选键）的部分与传递函数依赖**
 ```
 
 ## 模式分解
 
-### 问题
+模式分解讨论的问题就是如何拆表。
+
+- 保证拆出来的表再进行连接后与原来的大表相同-无损连接
+- 数据依赖关系是否相同-保持依赖
 
 ### 无损连接分解
 
+![image-20210504133907443](%E8%A7%84%E8%8C%83%E5%8C%96%E7%90%86%E8%AE%BA.assets/image-20210504133907443.png)
+
+![image-20210504134031608](%E8%A7%84%E8%8C%83%E5%8C%96%E7%90%86%E8%AE%BA.assets/image-20210504134031608.png)
+
+![image-20210504134105090](%E8%A7%84%E8%8C%83%E5%8C%96%E7%90%86%E8%AE%BA.assets/image-20210504134105090.png)
+
+
+
+```note
+列坐标表示的是某个属性
+
+行坐标表示的是分解后的一个关系，里面可能包含多个属性
+
+if 某个属性j属于某个关系i，则填写aj，else 填写bij
+```
+
+示例：
+
+![image-20210504134125051](%E8%A7%84%E8%8C%83%E5%8C%96%E7%90%86%E8%AE%BA.assets/image-20210504134125051.png)
+
+对于A->C，可以发现A这一列，取值相同的行有1、2、5行，因此可以把C列的值全部改成b13.
+
+对于其他函数依赖同理。最后结果如下，R3行变成全a，因此是无损的。
+
+![最后的结果](%E8%A7%84%E8%8C%83%E5%8C%96%E7%90%86%E8%AE%BA.assets/image-20210504135633509.png)
+
+
+
+```tip
+当把一个表拆成两个表的时候，可以快速判断：
+- 两者的交 -> 两者的差，则是无损连接。
+
+![image-20210504135943075](%E8%A7%84%E8%8C%83%E5%8C%96%E7%90%86%E8%AE%BA.assets/image-20210504135943075.png)
+```
+
+
+
 ### 保持连接分解
+
+![image-20210504135729868](%E8%A7%84%E8%8C%83%E5%8C%96%E7%90%86%E8%AE%BA.assets/image-20210504135729868.png)
+
+如上图的例子1，`{SZ∩CZ=Z}->{SZ-CZ=S}`，因此是无损连接。
+
+![image-20210504140602867](%E8%A7%84%E8%8C%83%E5%8C%96%E7%90%86%E8%AE%BA.assets/image-20210504140602867.png)
+
+```note
+找出分解后的每个关系R中的所有依赖集，把这些依赖集的集合记为G。
+
+若G覆盖F，则是保持依赖的；反之不是。
+
+比如下面的例子，丢失了CE->A，因此不保持依赖。（不需要看他算法执行的步骤，只需要对于每个分解出来的R，看他包含了原来的函数依赖集F里的哪些函数依赖，再把这些函数依赖集加起来，如果和原来的函数依赖集一样，就是保持依赖的）
+```
+
+![image-20210504140613463](%E8%A7%84%E8%8C%83%E5%8C%96%E7%90%86%E8%AE%BA.assets/image-20210504140613463.png)
+
