--- a/数据库基础/关系代数.md
+++ b/数据库基础/关系代数.md
@@ -2,3 +2,97 @@
 sort: 2
 ---
 # 关系代数
+
+> 直接放ppt了
+
+## 总体概览
+
+![image-20210504143846895](%E5%85%B3%E7%B3%BB%E4%BB%A3%E6%95%B0.assets/image-20210504143846895.png)
+
+### 域（列的取值范围）
+
+![image-20210504143910857](%E5%85%B3%E7%B3%BB%E4%BB%A3%E6%95%B0.assets/image-20210504143910857.png)
+
+### 笛卡尔积
+
+![image-20210504143930583](%E5%85%B3%E7%B3%BB%E4%BB%A3%E6%95%B0.assets/image-20210504143930583.png)
+
+### 分量、基数、域名、域值
+
+![image-20210504144022576](%E5%85%B3%E7%B3%BB%E4%BB%A3%E6%95%B0.assets/image-20210504144022576.png)
+
+### 关系、关系模式、表标题、度、目、基数
+
+![image-20210504144037024](%E5%85%B3%E7%B3%BB%E4%BB%A3%E6%95%B0.assets/image-20210504144037024.png)
+
+![image-20210504144053056](%E5%85%B3%E7%B3%BB%E4%BB%A3%E6%95%B0.assets/image-20210504144053056.png)
+
+![image-20210504144203410](%E5%85%B3%E7%B3%BB%E4%BB%A3%E6%95%B0.assets/image-20210504144203410.png)
+
+#### 关系与关系模式
+
+![image-20210504144242596](%E5%85%B3%E7%B3%BB%E4%BB%A3%E6%95%B0.assets/image-20210504144242596.png)
+
+### 候选码、候选键
+
+![image-20210504144336430](%E5%85%B3%E7%B3%BB%E4%BB%A3%E6%95%B0.assets/image-20210504144336430.png)
+
+![image-20210504144342851](%E5%85%B3%E7%B3%BB%E4%BB%A3%E6%95%B0.assets/image-20210504144342851.png)
+
+### 主码、主键
+
+![image-20210504144359174](%E5%85%B3%E7%B3%BB%E4%BB%A3%E6%95%B0.assets/image-20210504144359174.png)
+
+### 主属性、非主属性
+
+![image-20210504144416941](%E5%85%B3%E7%B3%BB%E4%BB%A3%E6%95%B0.assets/image-20210504144416941.png)
+
+### 外码、外键
+
+![image-20210504144436022](%E5%85%B3%E7%B3%BB%E4%BB%A3%E6%95%B0.assets/image-20210504144436022.png)
+
+![image-20210504144441081](%E5%85%B3%E7%B3%BB%E4%BB%A3%E6%95%B0.assets/image-20210504144441081.png)
+
+## 基本关系代数运算
+
+### 交、并、差
+
+略
+
+### 广义笛卡尔积
+
+![image-20210504144824127](%E5%85%B3%E7%B3%BB%E4%BB%A3%E6%95%B0.assets/image-20210504144824127.png)
+
+### 选择
+
+![image-20210504144838981](%E5%85%B3%E7%B3%BB%E4%BB%A3%E6%95%B0.assets/image-20210504144838981.png)
+
+### 投影
+
+![image-20210504144914074](%E5%85%B3%E7%B3%BB%E4%BB%A3%E6%95%B0.assets/image-20210504144914074.png)
+
+### θ连接
+
+![image-20210504145001011](%E5%85%B3%E7%B3%BB%E4%BB%A3%E6%95%B0.assets/image-20210504145001011.png)
+
+### 等值连接
+
+![image-20210504145027210](%E5%85%B3%E7%B3%BB%E4%BB%A3%E6%95%B0.assets/image-20210504145027210.png)
+
+### 自然连接
+
+![image-20210504145047787](%E5%85%B3%E7%B3%BB%E4%BB%A3%E6%95%B0.assets/image-20210504145047787.png)
+
+### 除
+
+![image-20210504145214738](%E5%85%B3%E7%B3%BB%E4%BB%A3%E6%95%B0.assets/image-20210504145214738.png)
+
+![image-20210504145226376](%E5%85%B3%E7%B3%BB%E4%BB%A3%E6%95%B0.assets/image-20210504145226376.png)
+
+### 外连接
+
+![image-20210504145257724](%E5%85%B3%E7%B3%BB%E4%BB%A3%E6%95%B0.assets/image-20210504145257724.png)
+
+![image-20210504145303278](%E5%85%B3%E7%B3%BB%E4%BB%A3%E6%95%B0.assets/image-20210504145303278.png)
+
+![image-20210504145313271](%E5%85%B3%E7%B3%BB%E4%BB%A3%E6%95%B0.assets/image-20210504145313271.png)
