--- a/数据库基础/数据库完整性和安全性控制.md
+++ b/数据库基础/数据库完整性和安全性控制.md
@@ -2,3 +2,89 @@
 sort: 3
 ---
 # 数据库完整性和安全性控制
+
+数据库完整性(DB Integrity)是指DBMS应保证DB在任何情况下**正确性、有效性和一致性。**
+
+关系模型中有完整性要求
+
+- 实体完整性
+- 参照完整性
+- 用户自定义完整性
+
+## 完整性约束
+
+完整性约束条件的一般形式：四元组
+
+Integrity Constraint ::= ( O，P，A，R)
+- O―数据集合：约束的对象？
+	- 列、多列(元组)、元组集合
+- P―谓词条件：什么样的约束？
+- A―触发条件：什么时候检查？
+- R―响应动作：不满足时怎么办？
+
+### 按约束对象分类
+
+完整性约束条件的类别
+
+-  **域完整性约束**条件
+  -  施加于某一列上，对给定列上所要更新的某一候选值是否可以接受进行约束条件判断，这是孤立进行的。
+- **关系完整性**约束条件
+  - 施加于关系/table上，对给定table上所要更新的某一候选元组是否可以接受进行约束条件判断，或是对一个关系中的若干元组和另一个关系中的若干元组间的联系是否可以接受进行约束条件判断。
+
+### 按约束来源分类
+
+- **结构约束**：来自于模型的约束，例如函数依赖约束、主键约束(实体完整性)、外键约束(参照完整性)，只关心数值相等与否、是否允许空值等；
+- **内容约束**：来自于用户的约束，如用户自定义完整性，关心元组或属性的取值范围。例如Student表的Sage属性值在15岁至40岁之间等。
+
+### 按约束状态分类
+
+- **静态约束**：
+	要求DB在任一时候均应满足的约束；例如Sage在任何时候都应满足大于0而小于150(假定人活最大年龄是150)。
+- **动态约束**：
+	要求DB从一状态变为另一状态时应满足的约束；
+	例如工资只能升，不能降：工资可以是800元，也可以是1000元；
+	可以从800元更改为1000元，但不能从1000元更改为800元。
+
+## SQL支持的约束
+
+静态约束：
+
+- 列完整性——域完整性约束
+- 表完整性——关系完整性约束
+
+动态约束：
+
+- 触发器
+
+## 安全性
+
+DBMS将权利和用户(帐户)结合在一起，形成一个访问规则表，依据该规则表可以实现对数据库的安全性控制
+
+AccessRule ::= ( S, O, t, P)
+- S: 请求主体(用户)
+- O: 访问对象
+- t: 访问权利
+- P: 谓词
+
+```note
+- { AccessRule｝通常存放在数据字典或称系统目录中，构成了所有用户对DB的访问权利; 
+- 用户多时，可以按用户组建立访问规则
+- 访问对象可大可小(目标粒度Object granularity):属性/字段、记录/元组、关系、数据库
+- 权利：create，增删改查等
+- P：拥有权利需满足条件
+```
+
+eg:
+
+![image-20210504143222694](%E6%95%B0%E6%8D%AE%E5%BA%93%E5%AE%8C%E6%95%B4%E6%80%A7%E5%92%8C%E5%AE%89%E5%85%A8%E6%80%A7%E6%8E%A7%E5%88%B6.assets/image-20210504143222694.png)
+
+### 实现方式
+
+存储矩阵：把每个对象的权限记录下来。
+
+![image-20210504143305435](%E6%95%B0%E6%8D%AE%E5%BA%93%E5%AE%8C%E6%95%B4%E6%80%A7%E5%92%8C%E5%AE%89%E5%85%A8%E6%80%A7%E6%8E%A7%E5%88%B6.assets/image-20210504143305435.png)
+
+视图：
+
+![image-20210504143323699](%E6%95%B0%E6%8D%AE%E5%BA%93%E5%AE%8C%E6%95%B4%E6%80%A7%E5%92%8C%E5%AE%89%E5%85%A8%E6%80%A7%E6%8E%A7%E5%88%B6.assets/image-20210504143323699.png)
+
