--- a/数据库基础/建模和设计.md
+++ b/数据库基础/建模和设计.md
@@ -3,3 +3,91 @@ sort: 4
 ---
 # 数据库建模和设计
 
+## E-R模型，Chen方法
+
+![image-20210504155651739](%E5%BB%BA%E6%A8%A1%E5%92%8C%E8%AE%BE%E8%AE%A1.assets/image-20210504155651739.png)
+
+```note
+实体是矩形、联系是菱形
+```
+
+
+
+![image-20210504165658038](%E5%BB%BA%E6%A8%A1%E5%92%8C%E8%AE%BE%E8%AE%A1.assets/image-20210504165658038-1620118680151.png)
+
+```note
+下面的方式更加好记
+```
+
+![image-20210504165737463](%E5%BB%BA%E6%A8%A1%E5%92%8C%E8%AE%BE%E8%AE%A1.assets/image-20210504165737463.png)
+
+
+
+```tip
+除了下面的图里圈圈提到的：
+- 联系可能需要属性刻画，即这个联系也算作一个实体
+- 每个实体需要给出关键字，用下划线表示
+- 实体的关键字要作为联系的属性，即作为联系的外键
+
+还要说一下0..1,1..1,0..m,的含义：
+- 图书对于借阅关系来说，可以不被借；最多被一个用户来借，因此是0..1
+- 读者对于借阅关系来说，可以不借书；也可以借很多本书，因此是0..m
+- 图书对于保存关系来说，所有的书都必须保存在一个书架上，不可能不放在书架上，也不可能放在好多个书架上
+```
+
+![image-20210504170104935](%E5%BB%BA%E6%A8%A1%E5%92%8C%E8%AE%BE%E8%AE%A1.assets/image-20210504170104935.png)
+
+### 建模示例
+
+1. 找出有哪些实体
+2. 找出实体有哪些属性
+3. 确认每个实体的关键字是什么
+4. 分析实体之间的关系
+	![image-20210504170805838](%E5%BB%BA%E6%A8%A1%E5%92%8C%E8%AE%BE%E8%AE%A1.assets/image-20210504170805838.png)
+5. 检查是否覆盖需求
+	![image-20210504170904362](%E5%BB%BA%E6%A8%A1%E5%92%8C%E8%AE%BE%E8%AE%A1.assets/image-20210504170904362.png)
+
+## E-R模型，Crow's Foot方法
+
+个人认为类似于UML类图了。
+
+![image-20210504171111072](%E5%BB%BA%E6%A8%A1%E5%92%8C%E8%AE%BE%E8%AE%A1.assets/image-20210504171111072.png)
+
+![image-20210504171139232](%E5%BB%BA%E6%A8%A1%E5%92%8C%E8%AE%BE%E8%AE%A1.assets/image-20210504171139232.png)
+
+![image-20210504171156554](%E5%BB%BA%E6%A8%A1%E5%92%8C%E8%AE%BE%E8%AE%A1.assets/image-20210504171156554.png)
+
+```note
+x对x的关系要记住是什么意思
+
+eg:
+![image-20210504171303466](%E5%BB%BA%E6%A8%A1%E5%92%8C%E8%AE%BE%E8%AE%A1.assets/image-20210504171303466.png)
+
+怎么理解呢？一个实体要去对面的实体看关系。
+- 比如对于一幅画，去painter那里看到那个符号表示的是1，则一幅画只能有一个painiter。
+- 对于一个painter，去painting那里看到是1或多的意思，则一个画家有一个或以上的作品
+
+eg2：
+![image-20210504171642981](%E5%BB%BA%E6%A8%A1%E5%92%8C%E8%AE%BE%E8%AE%A1.assets/image-20210504171642981.png)
+```
+
+自己参与自己怎么表示？一元关系
+
+![image-20210504171912380](%E5%BB%BA%E6%A8%A1%E5%92%8C%E8%AE%BE%E8%AE%A1.assets/image-20210504171912380.png)
+
+## E-R模型，IDEF1X
+
+![image-20210504172044186](%E5%BB%BA%E6%A8%A1%E5%92%8C%E8%AE%BE%E8%AE%A1.assets/image-20210504172044186.png)
+
+### 独立实体、从属实体
+
+![image-20210504172139213](%E5%BB%BA%E6%A8%A1%E5%92%8C%E8%AE%BE%E8%AE%A1.assets/image-20210504172139213.png)
+
+![image-20210504172201705](%E5%BB%BA%E6%A8%A1%E5%92%8C%E8%AE%BE%E8%AE%A1.assets/image-20210504172201705.png)
+
+相当于是拆表后产生的一主一从的表。
+
+画图要求：
+
+![image-20210504172339287](%E5%BB%BA%E6%A8%A1%E5%92%8C%E8%AE%BE%E8%AE%A1.assets/image-20210504172339287.png)
+
