--- a/分布式/一致性.md
+++ b/分布式/一致性.md
@@ -18,7 +18,7 @@
 [不同的资料](https://zhuanlan.zhihu.com/p/58952564)中对于一致性模型的解释并不是完全一样的。
 
 
-### 以数据为中心的一致性#
+### 以数据为中心的一致性
 综合现有的资料，一致性模型有以下几种，按我的理解将其与不同的时钟对应
 - Strict一致性，物理时钟（绝对全局时钟）
 - Linearizability一致性，全局时钟
