--- a/数据库基础/并发控制.md
+++ b/数据库基础/并发控制.md
@@ -219,7 +219,7 @@ if TS(T) >= RT(X) && TS(T) >= WT(X) {
 ### 事务分三个阶段进行
 
 - 读阶段。
-  - 事务从数据库中读取读集合中的所有元素。事务还在其局部地址空间计算它将要写的所有值；部地址空间计算它将要写的所有值；
+  - 事务从数据库中读取读集合中的所有元素。事务还在其局部地址空间计算它将要写的所有值；
 - 有效性确认阶段。
   - 调度器通过比较该事务与其它事务的读写集合来确认该事务的有效性。
 - 写阶段。
