--- a/数据库基础/并发控制.md
+++ b/数据库基础/并发控制.md
@@ -214,7 +214,7 @@ if TS(T) >= RT(X) && TS(T) >= WT(X) {
 
 1. START集合。已经开始但尚未完成有效性确认的事务集合。对此集合中的事务，调度器维护START(T)，即事务T**开始的时间。**
 2. VAL集合。已经确认有效性但尚未完成第3阶段写的事务。对此集合中的事务，调度器维护START(T)和VAL(T)，即T**确认的时间。**
-3. FIN集合。已经完成第3阶段的事务。对这样的事务T,START(T), VAL(T)和FIN(T)，即T**完成的时间。**
+3. FIN集合。已经完成第3阶段的事务。对这样的事务T，调度器维护START(T), VAL(T)和FIN(T)，即T**完成的时间。**
 
 ### 事务分三个阶段进行
 
