--- a/数据库基础/故障恢复.md
+++ b/数据库基础/故障恢复.md
@@ -63,12 +63,12 @@ sort: 10
 	- 步骤：
 		- 首先，<T, X, v>被写到日志中
 		- 其次，OUTPUT(X)
-		- 最后，<COMMIT T>或<ABORT T>被写到日志中
+		- 最后，`<COMMIT T>`或`<ABORT T>`被写到日志中
 - REDO，**先commit再output**
 	- 将事务改变的所有的值全部**写到日志**之前不能提交该事务，日志中仅保留新值。
 	- 步骤
 		- 首先，<T, X, v>被写到日志中
-		- 其次，<COMMIT T>被写到日志中
+		- 其次，`<COMMIT T>`被写到日志中
 		- 最后，OUTPUT(X)
 - 两者结合
 	- 步骤
