--- a/分布式/一致性.md
+++ b/分布式/一致性.md
@@ -23,6 +23,7 @@
 - Strict一致性，物理时钟（绝对全局时钟）
 - Linearizability一致性，全局时钟
 - Sequential一致性，逻辑时钟
+
 - Casual一致性，向量时钟
 - FIFO一致性
 - Weak一致性
@@ -54,10 +55,28 @@
 - 写读一致性（Writes-follow-reads Consistency）：
     同一个进程对数据项 x 执行的读操作之后的写操作，保证发生在与 x 读取值相同或比之更新的值上。即保证客户端**对一个数据项的写操作是基于该客户端最新读取的值**。
 
-
 ## 一致性协议
-Primary-based protocols 
 
-Replicated write protocols
+### 数据更新协议
 
-Cache-coherence protocols
+#### 基于push（服务器）的协议
+
+当需要高一致性的时候，更新会在没有请求的情况下传播到其他副本。（服务器主动推送）
+
+#### 基于pull（客户端）的协议
+
+更新的内容会根据要求传播到其他副本中去 
+
+![image-20210506120346644](一致性.assets/image-20210506120346644.png)
+
+### Primary-based protocols 
+
+主从协议，只有主服务器才有写X的权限。实现了顺序一致性
+
+### Replicated write protocols
+
+写操作可以在很多副本中进行
+
+### Cache-coherence protocols
+
+由客户端来决定是否同步复制
