--- a/分布式/一致性.md
+++ b/分布式/一致性.md
@@ -71,12 +71,34 @@
 
 ### Primary-based protocols 
 
-主从协议，只有主服务器才有写X的权限。实现了顺序一致性
+主从协议，只有主服务器才有写X的权限。实现了顺序一致性。
+
+**Remote-Write 协议**，有一个固定的服务器，所有读写操作都会被转发到这个服务器。数据是分布式的，但他们没有备份。并且相对耗时。
+
+**Local-Write 协议**。单个副本在各个进程之间迁移，是完全的无备份的分布式存储。位置信息是数据存储中的主要问题。对于断线的计算机很有用。
 
 ### Replicated write protocols
 
-写操作可以在很多副本中进行
+写操作可以在很多副本中进行。每个副本都有一个相关的进程来执行更新操作。
+
+问题：对某个数据的重复调用会产生问题（数据重复）
+
+**Quorum-Based Protocols**
+
+即raft的日志复制策略，日志复制到超过半数以上的节点后才提交。
 
 ### Cache-coherence protocols
 
-由客户端来决定是否同步复制
+由客户端来决定是否同步复制。
+
+- Coherence detection strategy（什么时候验证：三种）
+  - 在访问缓存的数据之前验证一致性
+  - 不验证：假设是一致的
+  - 使用了缓存的数据之后再去验证一致性
+- Coherence enforcement strategy（怎么验证：三种）
+  - 没有缓存共享数据（仅在服务器）
+  - 服务器向所有的缓存发送失效信息
+  - 服务器发送更新的缓存
+- Write-through cache
+  - 客户端修改缓存的数据，并且将这些更新转发给服务器
+
