--- a/数据库基础/关系代数.md
+++ b/数据库基础/关系代数.md
@@ -47,6 +47,16 @@ sort: 2
 
 ![image-20210504144416941](%E5%85%B3%E7%B3%BB%E4%BB%A3%E6%95%B0.assets/image-20210504144416941.png)
 
+```note
+- 一个关系可能有很多个候选码
+- 任选一个候选码可以作为主键、主码
+- 包含在候选码中的属性叫做主属性；其他的叫做非主属性
+
+可见：不止主键里的属性叫做主属性，只要是候选码里的都叫做主属性
+```
+
+
+
 ### 外码、外键
 
 ![image-20210504144436022](%E5%85%B3%E7%B3%BB%E4%BB%A3%E6%95%B0.assets/image-20210504144436022.png)
@@ -54,6 +64,8 @@ sort: 2
 ![image-20210504144441081](%E5%85%B3%E7%B3%BB%E4%BB%A3%E6%95%B0.assets/image-20210504144441081.png)
 
 ## 基本关系代数运算
+
+![image-20210509102243044](%E5%85%B3%E7%B3%BB%E4%BB%A3%E6%95%B0.assets/image-20210509102243044.png)
 
 ### 交、并、差
 
@@ -88,6 +100,14 @@ sort: 2
 ![image-20210504145214738](%E5%85%B3%E7%B3%BB%E4%BB%A3%E6%95%B0.assets/image-20210504145214738.png)
 
 ![image-20210504145226376](%E5%85%B3%E7%B3%BB%E4%BB%A3%E6%95%B0.assets/image-20210504145226376.png)
+
+例子：
+
+![image-20210509104345247](%E5%85%B3%E7%B3%BB%E4%BB%A3%E6%95%B0.assets/image-20210509104345247.png)
+
+![image-20210509104401267](%E5%85%B3%E7%B3%BB%E4%BB%A3%E6%95%B0.assets/image-20210509104401267.png)
+
+![image-20210509104458719](%E5%85%B3%E7%B3%BB%E4%BB%A3%E6%95%B0.assets/image-20210509104458719.png)
 
 ### 外连接
 
