--- a/数据库基础/建模和设计.md
+++ b/数据库基础/建模和设计.md
@@ -91,3 +91,22 @@ eg2：
 
 ![image-20210504172339287](%E5%BB%BA%E6%A8%A1%E5%92%8C%E8%AE%BE%E8%AE%A1.assets/image-20210504172339287.png)
 
+![image-20210509113108029](%E5%BB%BA%E6%A8%A1%E5%92%8C%E8%AE%BE%E8%AE%A1.assets/image-20210509113108029.png)
+
+
+
+
+
+
+
+### 四个联系
+
+![image-20210509114953379](%E5%BB%BA%E6%A8%A1%E5%92%8C%E8%AE%BE%E8%AE%A1.assets/image-20210509114953379.png)
+
+![image-20210509115004018](%E5%BB%BA%E6%A8%A1%E5%92%8C%E8%AE%BE%E8%AE%A1.assets/image-20210509115004018.png)
+
+![image-20210509140149854](%E5%BB%BA%E6%A8%A1%E5%92%8C%E8%AE%BE%E8%AE%A1.assets/image-20210509140149854.png)
+
+![image-20210509140215114](%E5%BB%BA%E6%A8%A1%E5%92%8C%E8%AE%BE%E8%AE%A1.assets/image-20210509140215114.png)
+
+![image-20210509140230256](%E5%BB%BA%E6%A8%A1%E5%92%8C%E8%AE%BE%E8%AE%A1.assets/image-20210509140230256.png)
